# ai-for-the-rest

./: .gitignore  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  GITHUB_SETUP.md  README.md  setup.ps1  test-sandbox.wsb  test-setup.ps1  test-wrapper.ps1
.claude/: settings.local.json
.github/workflows/: ci.yml  generate-demo.yml  publish.yml  test-environment-setup.yml
config/: config.json
docs/: aftr-cli-reference.md  architecture.md  demo.tape  getting-started.md  templates.md
examples/nyc-congestion-pricing/: pyproject.toml
examples/nyc-congestion-pricing/notebooks/: example.ipynb  visualizations.ipynb
plans/: test-refs-command.md
scripts/: publish.ts  setup.ps1  setup.sh  setup.ts
scripts/headroom/: claude-via-proxy.ts  headroom-proxy.ts
tests/: sandbox.wsb  test-claude-hr.ps1  test-sandbox.wsb  test-setup.ps1  test-wrapper.ps1
