[project]
name = "nyc-congestion-pricing"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "duckdb>=1.0.0",
    "playwright>=1.40.0",
    "jupyter>=1.0.0",
    "papermill>=2.6.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]
